force-app/main/default/objects/Contact/fields/Employment_Count__c.field-meta.xml
<CustomField>
    <fullName>Employment_Count__c</fullName>
    <label>Employment Count</label>
    <summaryFilterItems>
        <field>Employment__c.End_Date__c</field>
        <operation>equals</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Employment__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>