force-app/main/default/objects/Contact/fields/Employment_Income__c.field-meta.xml
<CustomField>
    <fullName>Employment_Income__c</fullName>
    <label>Employment Income</label>
    <summarizedField>Employment__c.Monthly_Income__c</summarizedField>
    <summaryFilterItems>
        <field>Employment__c.End_Date__c</field>
        <operation>equals</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Employment__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>