force-app/main/default/objects/Contact/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <formula>IF( Employment_Count__c &gt;0, &apos;Employed&apos;,&apos;Unemployed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employment Status</label>
    <type>Text</type>
</CustomField>