force-app/main/default/objects/Contact/fields/Failed_Login_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Failed_Login_Attempts__c</fullName>
    <label>Failed Login Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>