force-app/main/default/objects/Contact/fields/Important_Notes__c.field-meta.xml
<CustomField>
    <fullName>Important_Notes__c</fullName>
    <label>Important Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>