force-app/main/default/objects/Contact/fields/Income_Situation__c.field-meta.xml
<CustomField>
    <fullName>Income_Situation__c</fullName>
    <label>Income Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Income</fullName>
            </value>
            <value>
                <fullName>Multiple Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>