force-app/main/default/objects/Contact/fields/Investment_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Investment_Knowledge__c</fullName>
    <label>Investment Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>