force-app/main/default/objects/Contact/fields/Investment_Objective__c.field-meta.xml
<CustomField>
    <fullName>Investment_Objective__c</fullName>
    <label>Investment Objective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Aggressive Growth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>