force-app/main/default/objects/Contact/fields/Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Update__c</fullName>
    <formula>Last_Updated_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>