force-app/main/default/objects/Contact/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <label>LinkedIn</label>
    <length>40</length>
    <type>Text</type>
</CustomField>