force-app/main/default/objects/Contact/fields/Locked_Out__c.field-meta.xml
<CustomField>
    <fullName>Locked_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked Out</label>
    <type>Checkbox</type>
</CustomField>