force-app/main/default/objects/Contact/fields/Mail_Consent__c.field-meta.xml
<CustomField>
    <fullName>Mail_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail</label>
    <type>Checkbox</type>
</CustomField>