force-app/main/default/objects/Contact/fields/Monthly_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expenses__c</fullName>
    <label>Monthly Expenses</label>
    <summarizedField>Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>