force-app/main/default/objects/Contact/fields/Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Income__c</fullName>
    <formula>Total_Employment_Income__c  +  Total_Benefits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>