force-app/main/default/objects/Contact/fields/Number_of_Dependents__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dependents__c</fullName>
    <label>Number of Dependents</label>
    <summaryFilterItems>
        <field>Contact_Relationship__c.Is_Dependent__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Contact_Relationship__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>