force-app/main/default/objects/Contact/fields/Phone_Consent__c.field-meta.xml
<CustomField>
    <fullName>Phone_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone</label>
    <type>Checkbox</type>
</CustomField>