force-app/main/default/objects/Contact/fields/Profile_picture_id__c.field-meta.xml
<CustomField>
    <fullName>Profile_picture_id__c</fullName>
    <label>Profile Picture Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>