force-app/main/default/objects/Contact/fields/Risk_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Risk_Tolerance__c</fullName>
    <label>Risk Tolerance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>