force-app/main/default/objects/Contact/fields/SMS_Consent__c.field-meta.xml
<CustomField>
    <fullName>SMS_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS</label>
    <type>Checkbox</type>
</CustomField>