force-app/main/default/objects/Contact/fields/Target_Group__c.field-meta.xml
<CustomField>
    <fullName>Target_Group__c</fullName>
    <label>Target Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Francophone</fullName>
            </value>
            <value>
                <fullName>Indigenous</fullName>
            </value>
            <value>
                <fullName>Social Economy</fullName>
            </value>
            <value>
                <fullName>Visible Minority</fullName>
            </value>
            <value>
                <fullName>Youth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>