force-app/main/default/objects/Contact/fields/Target_Groups__c.field-meta.xml
<CustomField>
    <fullName>Target_Groups__c</fullName>
    <label>Target Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Indigenous</fullName>
            </value>
            <value>
                <fullName>Women</fullName>
            </value>
            <value>
                <fullName>Youth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>