force-app/main/default/objects/Contact/fields/Time_Horizon__c.field-meta.xml
<CustomField>
    <fullName>Time_Horizon__c</fullName>
    <label>Time Horizon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Term</fullName>
            </value>
            <value>
                <fullName>Medium Term</fullName>
            </value>
            <value>
                <fullName>Long Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>