force-app/main/default/objects/Contact/fields/Total_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Total_Benefits__c</fullName>
    <label>Total Benefits</label>
    <summarizedField>Benefit__c.Amount__c</summarizedField>
    <summaryForeignKey>Benefit__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>