force-app/main/default/objects/Contact/validationRules/Birthday_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Birthday_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Birthdate  &gt; Today()</errorConditionFormula>
    <errorMessage>Birthdate should not be in the future</errorMessage>
</ValidationRule>