force-app/main/default/objects/Contact/validationRules/Is_Birthdate_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Birthdate_Null</fullName>
    <active>false</active>
    <errorConditionFormula>ISNULL( Birthdate )</errorConditionFormula>
    <errorDisplayField>Birthdate</errorDisplayField>
    <errorMessage>Birthdate should be filled in</errorMessage>
</ValidationRule>