force-app/main/default/objects/Contact/validationRules/Status_Must_be_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Must_be_Active</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Priorvalue(Active__c)=true,ISCHANGED(Active__c))</errorConditionFormula>
    <errorMessage>Status must be in Active while create a new contact</errorMessage>
</ValidationRule>