force-app/main/default/objects/Contact/listViews/Inactive_Contacts.listView-meta.xml
<ListView>
    <fullName>Inactive_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Contacts</label>
</ListView>